--- a/juegodefinitivo.html
+++ b/juegodefinitivo.html
@@ -14,6 +14,7 @@
     </div>
 
     <div id="game-container" class="container" style="display:none;">
+        <div id="star-counter">Estrellas: <span id="star-count">0</span></div>
         <!-- Aquí se cargará la escena del juego -->
         <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
         <script src="src/startScene.js"></script>
